--- a/index.html
+++ b/index.html
@@ -3,9 +3,17 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <link rel="stylesheet" href="style.css">
     <title>veglinus.io</title>
 </head>
 <body>
-    <p>hejhej!</p>
+    <div id="particles-js">
+        <div id="box">
+            <p>Hejhej! Detta är ett test av <a href="https://github.com/VincentGarreau/particles.js/">particles.js.</a></p>
+        </div>
+    </div>
+
+    <script src="https://cdn.jsdelivr.net/npm/particles.js@2.0.0/particles.min.js"></script>
+    <script src="app.js"></script>
 </body>
 </html>
